--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         font-family: "Source Sans Pro", sans-serif;
       }
       header {
-        background-image: url(assets/home.jpg);
+        background-image: url(assets/nav img.avif);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
