--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700"
       rel="stylesheet"
     />
-    <title>Raydrive Storage App</title>
+    <title>E-waste Smart App</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -108,7 +108,7 @@
         <div class="w-full md:w-1/2">
           <img
             class="bg-white rounded"
-            src="assets/upload.png"
+            src="assets/home.png"
             alt="Upload"
           />
         </div>
@@ -137,7 +137,7 @@
         <div class="w-full md:w-1/2">
           <img
             class="img-photo"
-            src="assets/search.png"
+            src="assets/css/search.png"
             alt="Syncing"
           />
         </div>
