--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="w-full md:w-1/2">
           <img
             class="bg-white rounded"
-            src="assets/home.png"
+            src="assets/css/home.png"
             alt="Upload"
           />
         </div>
@@ -181,7 +181,7 @@
         <div class="flex justify-center">
           <a
             target="_blank"
-            href="https://github.com/Rowlandoka"
+            href="https://github.com/Kennedy826"
             class="mr-6 text-gray-600 hover:underline text-blue-400"
           >
             Github
