--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a
             class="text-2xl text-white font-bold md:text-4xl"
             href=""
-            >Raydrive</a
+            >E-Waste Smart App</a
           >
           <div class="block md:hidden">
             <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover: border-teal-500 appearance-none focus:outline-none">
@@ -79,13 +79,13 @@
       <!-- Hero Section -->
       <div class="py-20">
         <div class="container mx-auto px-6">
-          <h2 class="text-4xl text-white font-bold mb-2 text-black">Raydrive Online Photo Storage Application</h2>
-          <h3 class="text-2xl mb-8 text-white">A Smarter way to store your photos on the web, and retrieve anytime and anywhere!</h3>
+          <h2 class="text-4xl text-white font-bold mb-2 text-black">E-Waste Management System</h2>
+          <h3 class="text-2xl mb-8 text-white">Creating a smart and sustainable enviroment</h3>
           <button class="bg-white font-bold rounded-lg py-4 px-8 shadow-lg uppercase tracking-wider hover:bg-blue-200 hover:text-white hover:font-bold">
             <a
               target="_blank"
-              href="https://raydrive-7b649.web.app/"
-              >Visit the App</a
+              href="https://github.com/Kennedy826/E-waste-react-app"
+              >View the workspace</a
             >
           </button>
         </div>
@@ -93,16 +93,15 @@
     </header>
     <!-- Feature Sections -->
     <section
-      id="features"
+      id="Services"
       class="container px-6 mx-auto p-10 bg-slate-50"
     >
-      <h2 class="font-bold text-4xl text-center mb-8 text-gray-800">Features</h2>
+      <h2 class="font-bold text-4xl text-center mb-8 text-gray-800">Services</h2>
       <div class="flex items-center flex-wrap mb-20">
         <div class="w-full md:w-1/2">
-          <h4 class="font-bold text-3xl text-gray-800 mb-3">Upload Faster</h4>
+          <h4 class="font-bold text-3xl text-gray-800 mb-3">Collection Scheduling</h4>
           <p class="text-gray-600 mb-8">
-            Raydrive provides an easy, faster and smarter way to upload your photos and store your photos. You can capture your best moments and share with your friends anytime and anywhere and track
-            your pictures on the go.
+            Users can schedule pickups or drop-off appointments for their e-waste items at designated collection points or recycling centers. The app may provide a calendar or scheduling system to choose convenient dates and times.
           </p>
         </div>
         <div class="w-full md:w-1/2">
@@ -122,16 +121,15 @@
           />
         </div>
         <div class="w-full md:w-1/2">
-          <h4 class="font-bold text-3xl text-gray-800 mb-3">Effective Sharing</h4>
-          <p class="text-gray-600 mb-8">Raydrive allows you to share photos and images effective and smartly with friends over a network, and it allows for easy update of photo gallery.</p>
+          <h4 class="font-bold text-3xl text-gray-800 mb-3">Eco-Friendly Recycling Information</h4>
+          <p class="text-gray-600 mb-8">The app can provide information on the environmental benefits of recycling e-waste and how the recycling process works, raising awareness among users.</p>
         </div>
       </div>
       <div class="flex items-center flex-wrap mb-20">
         <div class="w-full md:w-1/2">
-          <h4 class="text-3xl text-gray-800 font-bold mb-3">Syncing & Search</h4>
+          <h4 class="text-3xl text-gray-800 font-bold mb-3">Location Finder</h4>
           <p class="text-gray-600 mb-8">
-            Raydrive online photo storage application allows you to sync your photo across all your mobile devices, allowing sign using your gmail account, providing a seamless experience. It provide
-            an easy way to search through your photos making for smooth user experience.
+            The app can help users locate the nearest e-waste recycling centers, collection points, or participating retailers where they can drop off their e-waste items.
           </p>
         </div>
         <div class="w-full md:w-1/2">
@@ -146,16 +144,13 @@
     <!-- About  -->
     <section
       id="about"
-      style="background-color: #667eea"
+      style="background-color: #20c997"
     >
       <div class="container mx-auto px-6 text-center py-20">
-        <h2 class="mb-6 text-4xl font-bold text-center text-white">About Raydrive</h2>
+        <h2 class="mb-6 text-4xl font-bold text-center text-white">About E-waste Smart App</h2>
         <p class="text-2xl text-white">
-          In a growing and ever expanding world, the changing world of business, the globalization of the world, the rise of social media as the new norms of the society, the demand to stay connected
-          with friends and family, colleagues, the importance of sharing in the moments of joy and to enhance deeper connection, is the undying need for greater innovation and technological
-          advancement. Capturing special moments whether it is vacation with friends and family members, sharing special moments and events in a family and others ceremonies or celebration. Raydrive
-          is an app for the moment, as it helps in capturing those special moments, creating a platform for sharing those moments with everyone on the go, without much hassle.Time limitation was a
-          major constraint for the building of this great app. Raydrive is a personal portfolio project built as part of the requirements of
+          As the world continues to battle effects of environmental degradation as a result of poor waste disposal, there is need for immediate remedies that would ensure environment is protected from any form of damage be it on the energy consumption, industrial emittance and outdated agricultural practices. The solutions for these problems can be realized through efficiemnt and economically viable applications that would ensure anyone who has access to smartphone can do waste disporsal efficiently. E-Waste Smart App offers a range of services and features to facilitate the responsible disposal, recycling, and management of electronic waste (e-waste). These services are designed to make it easier for individuals and businesses to participate in e-waste recycling efforts.
+          
           <a
             class="text-gray-700"
             target="_blank"
@@ -166,7 +161,7 @@
         <a
           class="text-2xl underline underline-offset-8 hover:text-blue-400
           target="_blank"
-          href="https://github.com/Rowlandoka/storageApp_portfolio"
+          href="https://github.com/Kennedy826/E-waste-react-app.git"
           >Github repository</a
         >
       </div>
@@ -209,7 +204,7 @@
         <a
           class="font-semibold text-neutral-600"
           href="https://raydrive-7b649.web.app/"
-          >Raydrive</a
+          >E-Waste Smart App</a
         >
       </div>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
