--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <!-- Hero Section -->
       <div class="py-20">
         <div class="container mx-auto px-6">
-          <h2 class="text-4xl text-white font-bold mb-2 text-black">E-Waste Management System</h2>
+          <h2 class="text-4xl text-white font-bold mb-2 text-black">E-Waste App</h2>
           <h3 class="text-2xl mb-8 text-white">Creating a smart and sustainable enviroment</h3>
           <button class="bg-white font-bold rounded-lg py-4 px-8 shadow-lg uppercase tracking-wider hover:bg-blue-200 hover:text-white hover:font-bold">
             <a
