--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               </li>
               <li>
                 <a
-                  href="#features"
+                  href="#Services"
                   class="px-4 hover:text-gray-400"
-                  >Features</a
+                  >Services</a
                 >
               </li>
               <li>
@@ -116,8 +116,8 @@
         <div class="w-full md:w-1/2">
           <img
             class="img-photo"
-            src="assets/share.png"
-            alt="Reporting"
+            src="assets/css/Eco.png"
+            alt="Upload image"
           />
         </div>
         <div class="w-full md:w-1/2">
@@ -135,8 +135,8 @@
         <div class="w-full md:w-1/2">
           <img
             class="img-photo"
-            src="assets/css/search.png"
-            alt="Syncing"
+            src="assets/css/location.png"
+            alt="Upload image"
           />
         </div>
       </div>
