--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul class="inline-flex text-white">
               <li>
                 <a
-                  href="/"
+                  href="/#"
                   class="px-4 font-bold"
                   >Home</a
                 >
