--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700"
       rel="stylesheet"
     />
-    <title>E-waste Smart App</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -53,7 +52,7 @@
             <ul class="inline-flex text-white">
               <li>
                 <a
-                  href="/#"
+                  href="/#!"
                   class="px-4 font-bold"
                   >Home</a
                 >
@@ -80,7 +79,7 @@
       <div class="py-20">
         <div class="container mx-auto px-6">
           <h2 class="text-4xl text-white font-bold mb-2 text-black">E-Waste App</h2>
-          <h3 class="text-2xl mb-8 text-white">Creating a smart and sustainable enviroment</h3>
+          <h3 class="text-2xl mb-8 text-white">Creating a smart and sustainable enviroment.</h3>
           <button class="bg-white font-bold rounded-lg py-4 px-8 shadow-lg uppercase tracking-wider hover:bg-blue-200 hover:text-white hover:font-bold">
             <a
               target="_blank"
@@ -203,7 +202,7 @@
         <span>© 2023 Copyright:</span>
         <a
           class="font-semibold text-neutral-600"
-          href="https://raydrive-7b649.web.app/"
+          href="https://github.com/Kennedy826/E-waste-react-app"
           >E-Waste Smart App</a
         >
       </div>
