--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </a>
           <a
             target="_blank"
-            href="#!"
+            href="https://www.linkedin.com/in/kennedy-onyango-58ba341ab/"
             class="mr-6 text-gray-600 hover:underline text-blue-400"
           >
             Linkedin
