--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
     <header class="bg-white">
       <nav>
         <div class="container flex items-center justify-between mx-auto px-6 py-2">
-          <a
-            class="text-2xl text-white font-bold md:text-4xl"
-            href=""
-            >E-Waste Smart App</a
-          >
           <div class="block md:hidden">
             <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover: border-teal-500 appearance-none focus:outline-none">
               <svg
@@ -148,8 +143,7 @@
       <div class="container mx-auto px-6 text-center py-20">
         <h2 class="mb-6 text-4xl font-bold text-center text-white">About E-waste Smart App</h2>
         <p class="text-2xl text-white">
-          As the world continues to battle effects of environmental degradation as a result of poor waste disposal, there is need for immediate remedies that would ensure environment is protected from any form of damage be it on the energy consumption, industrial emittance and outdated agricultural practices. The solutions for these problems can be realized through efficiemnt and economically viable applications that would ensure anyone who has access to smartphone can do waste disporsal efficiently. E-Waste Smart App offers a range of services and features to facilitate the responsible disposal, recycling, and management of electronic waste (e-waste). These services are designed to make it easier for individuals and businesses to participate in e-waste recycling efforts.
-          
+          As the world continues to battle effects of environmental degradation as a result of poor waste disposal, there is need for immediate remedies that would ensure environment is protected from any form of damage be it on the energy consumption, industrial emittance and outdated agricultural practices. The solutions for these problems can be realized through efficiemnt and economically viable applications that would ensure anyone who has access to smartphone can do waste disporsal efficiently. E-Waste Smart App offers a range of services and features to facilitate the responsible disposal, recycling, and management of waste. These services are designed to make it easier for individuals and businesses to participate in e-waste recycling efforts.
           <a
             class="text-gray-700"
             target="_blank"
