--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body class="text-gray-700 bg-white">
     <header class="bg-white">
-      <nav>
+      <nav class="text-right">
         <div class="container flex items-center justify-between mx-auto px-6 py-2">
           <div class="block md:hidden">
             <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover: border-teal-500 appearance-none focus:outline-none">
