--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
   </head>
   <body class="text-gray-700 bg-white">
     <header class="bg-white">
-      <nav class="text-right">
+      <nav>
         <div class="container flex items-center justify-between mx-auto px-6 py-2">
+           <a
+            class="text-2xl text-white font-bold md:text-4xl"
+            href=""
+            >Raydrive</a
+              >
           <div class="block md:hidden">
             <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover: border-teal-500 appearance-none focus:outline-none">
               <svg
