--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="container flex items-center justify-between mx-auto px-6 py-2">
            <a
             class="text-2xl text-white font-bold md:text-4xl"
-             href=""
-            </a>
+             
+            >E-Waste Smart App</a>
           <div class="block md:hidden">
             <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover: border-teal-500 appearance-none focus:outline-none">
               <svg
@@ -77,8 +77,8 @@
       <!-- Hero Section -->
       <div class="py-20">
         <div class="container mx-auto px-6">
-          <h2 class="text-4xl text-white font-bold mb-2 text-black">E-Waste App</h2>
-          <h3 class="text-2xl mb-8 text-white">Creating a smart and sustainable enviroment.</h3>
+          <h2 class="text-4xl text-white font-bold mb-2 text-black"></h2>
+          <h3 class="text-2xl mb-8 text-white">Creating a clean and sustainable enviroment through proper management of waste.</h3>
           <button class="bg-white font-bold rounded-lg py-4 px-8 shadow-lg uppercase tracking-wider hover:bg-blue-200 hover:text-white hover:font-bold">
             <a
               target="_blank"
