--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             target="_blank"
             href="https://www.alxafrica.com/"
             >ALX Software Engineering </a
-          >. A school for raising technology enthusiats and the next generation of innovators, using cutting edge technology.
+          >. An academy offering market oriented programmes with a quick learning curve for beginners in technology.
         </p>
         <a
           class="text-2xl underline underline-offset-8 hover:text-blue-400
