--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         font-family: "Source Sans Pro", sans-serif;
       }
       header {
-        background-image: url(assets/css/env1.png);
+        background-image: url(assets/css/home.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
