--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               </svg>
             </button>
           </div>
-          <div class="hidden lg:block">
-            <ul class="inline-flex text-white">
-              <li>
+          <div class="hidden lg:block position:fixed">
+            <ul class="inline-flex text-white list-style-type: none padding: 0">
+              <li class="container position: relative, padding: 0">
                 <a
                   href="/#!"
                   class="px-4 font-bold"
