--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         font-family: "Source Sans Pro", sans-serif;
       }
       header {
-        background-image: url(assets/css/home.png);
+        background-image: url(assets/css/nav.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -51,7 +51,7 @@
             <ul class="inline-flex text-white list-style-type: none padding: 0">
               <li class="container position: relative, padding: 0">
                 <a
-                  href="/#!"
+                  href=""
                   class="px-4 font-bold"
                   >Home</a
                 >
