--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="py-20">
         <div class="container mx-auto px-6">
           <h2 class="text-4xl text-white font-bold mb-2 text-black"></h2>
-          <h3 class="text-2xl mb-8 text-white-400">Creating a clean and sustainable enviroment through proper management of waste.</h3>
+          <h3 class="text-2xl mb-8 text-white">Creating a clean and sustainable enviroment through proper management of waste.</h3>
           <button class="bg-white font-bold rounded-lg py-4 px-8 shadow-lg uppercase tracking-wider hover:bg-blue-200 hover:text-white hover:font-bold">
             <a
               target="_blank"
